--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -59,6 +59,9 @@ services:
       - /home/pi/Videos/Movies:/movies
       - /home/pi/Videos/Shows:/tv
       - /home/pi/config/config/bazarr:/config
+    networks:
+      local-net:
+        ipv4_address: 192.168.66.44
   prowlarr:
     image: linuxserver/prowlarr:develop
     restart: always
