--- a/yiya/prometheus.yml
+++ b/yiya/prometheus.yml
@@ -50,4 +50,8 @@ scrape_configs:
     metrics_path: '/metrics'
     static_configs:
       - targets: ['yiya:3001']
-
+  - job_name: 'orion'
+    scrape_interval: 60s
+    static_configs:
+      - targets: ['192.168.66.1:9100']
+    scheme: http
